# dlib-android-facedect

./: README.md
app/: build.gradle
app/libs/include/dlib/: config.h
app/libs/include/dlib/java/: swig_test.java
app/libs/include/dlib/logger/: logger_kernel_1.cpp
app/libs/include/opencv2/: core.hpp
app/src/androidTest/java/com/ty/opencvtest/: ExampleInstrumentedTest.kt  MainActivityTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  face_landmark_detection_ex.cpp  native-lib.cpp
app/src/main/java/com/ty/opencvtest/: MainActivity.kt
app/src/main/java/org/opencv/android/: CameraBridgeViewBase.java  CameraGLSurfaceView.java  JavaCameraView.java  OpenCVLoader.java
app/src/main/java/org/opencv/imgproc/: Imgproc.java
app/src/main/java/org/opencv/video/: video.lnk
app/src/main/res/layout/: activity_main.xml  face_detect_surface_view.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/ty/opencvtest/: ExampleUnitTest.kt
